stateDiagram-v2
  [*] --> Waiting
  Waiting --> Active: admin starts session
  Active --> Generating: admin starts round
  Generating --> Voting: answers and AI ballots saved
  Generating --> Aborted: all model calls fail
  Voting --> Scored: admin closes voting
  Scored --> Generating: admin starts next round
  Scored --> Ended: final round complete
  Active --> Stopped: admin stops session
  Waiting --> Stopped: admin stops before start
  Aborted --> Stopped
  Ended --> [*]
  Stopped --> [*]
